manifests/syspass/deployment-syspass.yml
kind: Deployment
apiVersion: apps/v1
metadata:
    name: syspass
    namespace: $NAMESPACE
spec:
    replicas: 1
    selector:
        matchLabels:
          app: syspass
    template:
        metadata:
            labels: 
              app: syspass
        spec:
            containers:
                - name: syspass
                  image: syspass/syspass:3.1.0
                  ports:
                     - containerPort: 80
                     - containerPort: 443
                  volumeMounts:
                     - name: disco-config
                       mountPath: /var/www/html/sysPass/app/config
                     - name: disco-backup
                       mountPath: /var/www/html/sysPass/app/backup
                  startupProbe:
                     httpGet:
                        path: /
                        scheme: HTTP
                        port: 80
                  livenessProbe:
                     httpGet:
                        path: /
                        scheme: HTTP
                        port: 80
            volumes:
                - name: disco-config
                  persistentVolumeClaim:
                      claimName: pvc-syspass-config
                - name: disco-backup
                  persistentVolumeClaim:
                      claimName: pvc-syspass-backup
                - name: disco-config-secrets
                  secret:
                      secretName: syspass-config
