manifests/syspass/service-mysql.yml
kind: Service
apiVersion: v1
metadata:
    name: svc-syspass-mysql
    namespace: $NAMESPACE
spec:
    selector:
        app: syspass-mysql
    ports:
        - protocol: TCP
          port: 3306
          targetPort: 3306
