manifests/syspass/service-syspass.yml
kind: Service
apiVersion: v1
metadata:
    name: svc-syspass
    namespace: $NAMESPACE
spec:
    selector:
        app: syspass
    ports:
        - protocol: TCP
          port: 443
          targetPort: 443
